# mcts-tic-tac-toe

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/game/: CBackPropagationStrategy.hpp  CExpansionStrategy.hpp  CMove.cpp  CMove.hpp  CSimulationStrategy.hpp  CState.cpp  CState.hpp  CTerminalCriteria.hpp  CTerminalEval.hpp
src/ui/: cell.cpp  cell.h  grid.cpp  grid.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
